--- a/projects/MKRVIDOR4000_template/MKRVIDOR4000.qsf
+++ b/projects/MKRVIDOR4000_template/MKRVIDOR4000.qsf
@@ -89,6 +89,7 @@ set_global_assignment -name OPTIMIZATION_MODE "AGGRESSIVE PERFORMANCE"
 
 
 set_global_assignment -name ENABLE_SIGNALTAP OFF
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/myo_control/spi_master_slave/trunk/rtl/spi_master_slave/spi_slave.vhd
 set_global_assignment -name QIP_FILE ../../ip/SYSTEM_PLL/SYSTEM_PLL.qip
 set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/myo_control/spi_master_slave/trunk/rtl/spi_master_slave/spi_master.vhd
 set_global_assignment -name VERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/myo_control/PIDController.v
