--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "roboy_fpga_code"]
 	path = roboy_fpga_code
 	url = https://github.com/Roboy/roboy_fpga_code
+[submodule "roboy_2.0_forarm_shield/kicad_db"]
+	path = roboy_2.0_forarm_shield/kicad_db
+	url = https://github.com/Roboy/kicad_db
