--- a/projects/MKRVIDOR4000_template/MKRVIDOR4000.qsf
+++ b/projects/MKRVIDOR4000_template/MKRVIDOR4000.qsf
@@ -89,13 +89,35 @@ set_global_assignment -name OPTIMIZATION_MODE "AGGRESSIVE PERFORMANCE"
 
 
 set_global_assignment -name ENABLE_SIGNALTAP OFF
+set_global_assignment -name VERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu/trunk/verilog/primitives.v
+set_global_assignment -name VERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu/trunk/verilog/pre_norm_fmul.v
+set_global_assignment -name VERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu/trunk/verilog/pre_norm.v
+set_global_assignment -name VERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu/trunk/verilog/post_norm.v
+set_global_assignment -name VERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu/trunk/verilog/fpu.v
+set_global_assignment -name VERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu/trunk/verilog/except.v
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/sqrt.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/serial_mul.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/serial_div.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/pre_norm_sqrt.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/pre_norm_mul.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/pre_norm_div.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/pre_norm_addsub.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/post_norm_sqrt.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/post_norm_mul.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/post_norm_div.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/post_norm_addsub.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/mul_24.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/fpupack.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/fpu.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/comppack.vhd
+set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/fpu100/trunk/addsub_28.vhd
+set_global_assignment -name SYSTEMVERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/myo_control/MYOControl.sv
 set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/myo_control/spi_master_slave/trunk/rtl/spi_master_slave/spi_slave.vhd
 set_global_assignment -name QIP_FILE ../../ip/SYSTEM_PLL/SYSTEM_PLL.qip
 set_global_assignment -name VHDL_FILE ../../roboy_fpga_code/roboy_fpga_code/myo_control/spi_master_slave/trunk/rtl/spi_master_slave/spi_master.vhd
-set_global_assignment -name VERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/myo_control/PIDController.v
-set_global_assignment -name VERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/myo_control/MYOControl.v
 set_global_assignment -name VERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/myo_control/A1335Control.v
 set_global_assignment -name VERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/myo_control/SpiControl.v
 set_global_assignment -name SDC_FILE ../../constraints/MKRVIDOR4000/vidor_s.sdc
 set_global_assignment -name VERILOG_FILE MKRVIDOR4000_top.v
+set_global_assignment -name SYSTEMVERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/interfaces/MyoControlInterface.sv
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
