--- a/projects/MKRVIDOR4000_template/MKRVIDOR4000.qsf
+++ b/projects/MKRVIDOR4000_template/MKRVIDOR4000.qsf
@@ -105,4 +105,7 @@ set_global_assignment -name VERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/m
 set_global_assignment -name VERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/myo_control/SpiControl.v
 set_global_assignment -name SDC_FILE ../../constraints/MKRVIDOR4000/vidor_s.sdc
 set_global_assignment -name SYSTEMVERILOG_FILE ../../roboy_fpga_code/roboy_fpga_code/interfaces/MyoControlInterface.sv
+set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to bMKR_A[4]
+set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to bMKR_A[5]
+set_instance_assignment -name WEAK_PULL_UP_RESISTOR ON -to bMKR_A[6]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
